@@ -7,7 +7,6 @@ buildscript {
         }
     }
     dependencies {
-//        classpath group: 'net.researchgate', name: 'gradle-release', version: '2.8.1'
         classpath 'gradle.plugin.org.kt3k.gradle.plugin:coveralls-gradle-plugin:2.12.0'
         classpath "gradle.plugin.com.github.jengelman.gradle.plugins:shadow:7.0.0"
         classpath 'com.adarshr:gradle-test-logger-plugin:2.0.0'
@@ -17,14 +16,12 @@ buildscript {
 repositories {
     mavenLocal()
     mavenCentral()
-    maven { url "https://jitpack.io" }
 }
 
-//apply plugin: 'net.researchgate.release'
 apply plugin: 'jacoco'
 
 jacoco {
-    toolVersion = '0.8.5'
+    toolVersion = '0.8.8'
 }
 
 allprojects {
@@ -43,12 +40,12 @@ allprojects {
 subprojects {
     apply plugin: 'java'
     apply plugin: 'maven-publish'
- //   apply plugin: 'com.jfrog.bintray'
 
     publishing {
         publications {
             mavenJava(MavenPublication) {
-                from components.java
+                //from components.java
+                artifact jar 
             }
         }
         repositories {
@@ -56,25 +53,22 @@ subprojects {
         }
     }
 
-    task install(dependsOn: publishToMavenLocal)
-
     sourceCompatibility = 1.8
     targetCompatibility = 1.8
 
     repositories {
         mavenCentral()
-//        jcenter()
         maven {
             url new File(rootProject.rootDir, "grobid-core/localLibs")
         }
         maven { url "https://jitpack.io" }
     }
 
-    configurations {
+    /*configurations {
         all*.exclude group: 'org.slf4j', module: "slf4j-log4j12"
         //all*.exclude group: 'log4j', module: "log4j"
 //        implementation.setCanBeResolved(true)
-    }
+    }*/
 
     ext {
         // treating them separately, these jars will be flattened into grobid-core.jar on installing,
@@ -112,7 +106,6 @@ subprojects {
         implementation "com.fasterxml.jackson.core:jackson-core:2.10.1"
         implementation "com.fasterxml.jackson.core:jackson-databind:2.10.1"
         implementation "com.fasterxml.jackson.module:jackson-module-afterburner:2.10.1"
-        //implementation 'com.fasterxml.jackson.core:jackson-annotations:2.10.1'
         implementation "com.fasterxml.jackson.dataformat:jackson-dataformat-yaml:2.10.1"
         implementation 'org.apache.xmlgraphics:batik-anim:1.14'
         implementation 'org.apache.xmlgraphics:batik-bridge:1.14'
@@ -130,30 +123,6 @@ subprojects {
         archives sourceJar
         archives jar
     }
-
-
-    /*
-    // removing - this currently breaks the release 
-    task gitRev(type: Exec) {
-        commandLine 'git', 'rev-parse', '--short', 'HEAD'
-        standardOutput = new ByteArrayOutputStream()
-        ext.hash = {
-            standardOutput.toString()
-        }
-    }
-
-    // allows to upload non-snapshot versions that are tight to git revision (substitutes the version if it's a snapshot one)
-    // usage "gradle uploadArchives -PversionWithGitRev"
-    task changeVersionIfNeeded(dependsOn: gitRev) {
-        doLast {
-            def suffix = '-SNAPSHOT'
-            if (project.hasProperty('versionWithGitRev') && project.version.endsWith(suffix)) {
-                println project.version
-                project.version = project.version.substring(0, project.version.length() - suffix.length()) + "-" + tasks.gitRev.hash()
-                println "Version to be uploaded: " + project.version
-            }
-        }
-    }*/
 
     //compileJava.dependsOn(changeVersionIfNeeded)
 
@@ -181,41 +150,34 @@ subprojects {
 //        }
 //    }
 
-    /*
-    bintray {
-        dryRun = false // Whether to run this as dry-run, without deploying
-        publish = true // If version should be auto published after an upload
-
-        // read from ~/.gradle/gradle.properties. Set those up before releasing
-        user = project.hasProperty('bintrayUser') ? bintrayUser : ''
-        key = project.hasProperty('bintrayApiKey') ? bintrayApiKey : ''
-        configurations = ['archives']
-        pkg {
-            name = 'grobid'
-            repo = 'maven'
-            userOrg = 'rookies'
-            licenses = ['Apache-2.0']
-            vcsUrl = 'https://github.com/kermitt2/grobid'
-            issueTrackerUrl = 'https://github.com/kermitt2/grobid/issues'
-            githubRepo = 'kermitt2/grobid'
-
-            version {
-                name = rootProject.version
-                vcsTag = rootProject.version
-                released = new Date()
-            }
-        }
-    }
-    */
-
     test {
         testLogging.showStandardStreams = true
         // enable for having separate test executor for different tests
         forkEvery = 1
-        maxHeapSize = "1024m"
-    }
+        maxHeapSize = "1024m"        
 
-    //rootProject.afterReleaseBuild.dependsOn subprojects.bintrayUpload
+        def libraries = ""
+        if (Os.isFamily(Os.FAMILY_MAC)) {
+            if (Os.OS_ARCH.equals("aarch64")) {
+                libraries = "${file("./grobid-home/lib/mac_arm-64").absolutePath}"
+            } else {
+                libraries = "${file("./grobid-home/lib/mac-64").absolutePath}"
+            }
+        } else if (Os.isFamily(Os.FAMILY_UNIX)) {            
+            def jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64/jep"
+            libraries = jepDir
+            jepDir = rootProject.rootDir.getAbsolutePath() + "/grobid-home/lib/lin-64"
+            libraries += ":"+jepDir
+        } else {
+            throw new RuntimeException("Unsupported platform!")
+        }
+
+        if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+            jvmArgs "--add-opens", "java.base/java.util.stream=ALL-UNNAMED", 
+            "--add-opens", "java.base/java.io=ALL-UNNAMED"
+        }
+        systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
+    }
 }
 
 /** SUBPROJECTS **/
@@ -240,7 +202,7 @@ project("grobid-core") {
 
         // Logs
         api 'org.slf4j:slf4j-api:1.7.25'
-        api 'org.slf4j:slf4j-log4j12:1.7.25'
+        //api 'org.slf4j:slf4j-log4j12:1.7.25'
         runtimeOnly 'org.slf4j:slf4j-jdk14:1.7.25'
 
         implementation "org.apache.pdfbox:pdfbox:2.0.18"
@@ -293,8 +255,8 @@ project("grobid-core") {
     }
 
     artifacts {
-        archives shadowJar
         archives jar
+        archives shadowJar
     }
 
     processResources {
@@ -303,6 +265,11 @@ project("grobid-core") {
                 it.replace('project.version', project.property('version'))
             }
         }
+    }
+
+    task install {
+        dependsOn publishToMavenLocal
+        dependsOn 'shadowJar'
     }
 }
 
@@ -327,13 +294,48 @@ project("grobid-home") {
     }
 }
 
+import org.apache.tools.ant.taskdefs.condition.Os
+
 project(":grobid-service") {
     apply plugin: 'application'
     apply plugin: 'jacoco'
     apply plugin: 'com.github.johnrengelman.shadow'
 
     mainClassName = 'org.grobid.service.main.GrobidServiceApplication'
-    tasks.run.workingDir = rootProject.rootDir
+
+    tasks.run {
+        def libraries = ""
+        if (Os.isFamily(Os.FAMILY_MAC)) {
+            if (Os.OS_ARCH.equals("aarch64")) {
+                libraries = "${file("../grobid-home/lib/mac_arm-64").absolutePath}"
+            } else {
+                libraries = "${file("../grobid-home/lib/mac-64").absolutePath}"
+            }
+        } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+            libraries = "${file("../grobid-home/lib/lin-64/jep").absolutePath}:" +
+                "${file("../grobid-home/lib/lin-64").absolutePath}:"
+        } else  {
+            throw new RuntimeException("Unsupported platform!")
+        }
+        
+        if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+            jvmArgs "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+        }
+        workingDir = rootProject.rootDir
+        def javaLibraryPath = "${System.getProperty('java.library.path')}:" + libraries
+//        if (System.env.CONDA_PREFIX) {
+//            def condaEnv = "${System.env.CONDA_PREFIX}/lib"
+//            def pythonDirectory = file(condaEnv).listFiles({ it.toString().contains("/lib/python") } as FileFilter)?.first()
+//            def pythonVersion = (pythonDirectory =~ /python([0-9]\.[0-9]+)/)[0][1]
+//
+//            javaLibraryPath = "${System.getProperty('java.library.path')}:" +
+//                libraries + ":" +
+//                "${System.env.CONDA_PREFIX}/lib:" +
+//                "${System.env.CONDA_PREFIX}/lib/python${pythonVersion}/site-packages/jep"
+//        }
+        systemProperty "java.library.path", javaLibraryPath
+
+    }
 
     configurations {
         all*.exclude group: 'org.slf4j', module: "slf4j-jdk14"
@@ -350,7 +352,7 @@ project(":grobid-service") {
     distTar { duplicatesStrategy = DuplicatesStrategy.EXCLUDE }
 
     dependencies {
-        implementation project(':grobid-core')
+        implementation project(':grobid-core') 
         implementation project(':grobid-trainer')
         implementation "io.dropwizard:dropwizard-core:1.3.23"
         implementation "io.dropwizard:dropwizard-assets:1.3.23"
@@ -412,9 +414,9 @@ project(":grobid-trainer") {
         implementation project(':grobid-core')
         implementation "com.rockymadden.stringmetric:stringmetric-core_2.10:0.27.3"
         implementation "me.tongfei:progressbar:0.9.0"
-        implementation 'org.slf4j:slf4j-log4j12:1.7.25'
+        //implementation 'org.slf4j:slf4j-log4j12:1.7.25'
         implementation 'org.slf4j:slf4j-api:1.7.25'
-        implementation 'org.slf4j:slf4j-jdk14:1.7.25'
+        //implementation 'org.slf4j:slf4j-jdk14:1.7.25'
     }
 
     configurations {
@@ -425,7 +427,6 @@ project(":grobid-trainer") {
 
     jar {
         from {
-//            project.configurations.implementation.collect {
             project.configurations.runtimeClasspath.collect {
                 it.isDirectory() ? [] : localLibs.contains(it.getName()) ? zipTree(it) : []
             }
@@ -450,6 +451,11 @@ project(":grobid-trainer") {
         archives jar
     }
 
+    task install {
+        dependsOn publishToMavenLocal
+        dependsOn 'shadowJar'
+    }
+
     def trainerTasks = [
         "train_name_header"           : "org.grobid.trainer.NameHeaderTrainer",
         "train_name_citation"         : "org.grobid.trainer.NameCitationTrainer",
@@ -464,13 +470,31 @@ project(":grobid-trainer") {
         "train_segmentation"          : "org.grobid.trainer.SegmentationTrainer",
         "train_reference_segmentation": "org.grobid.trainer.ReferenceSegmenterTrainer",
         "train_ebook_model"           : "org.grobid.trainer.EbookTrainer",
-        "train_patent_citation"       : "org.grobid.trainer.PatentParserTrainer"
+        "train_patent_citation"       : "org.grobid.trainer.PatentParserTrainer",
+        "train_funding_acknowledgement" : "org.grobid.trainer.FundingAcknowledgementTrainer"
     ]
 
+    def libraries = ""
+    if (Os.isFamily(Os.FAMILY_MAC)) {
+        if (Os.OS_ARCH.equals("aarch64")) {
+            libraries = "${file("../grobid-home/lib/mac_arm-64").absolutePath}"    
+        } else {
+            libraries = "${file("../grobid-home/lib/mac-64").absolutePath}"
+        }
+    } else if (Os.isFamily(Os.FAMILY_UNIX)) {
+        libraries = "${file("../grobid-home/lib/lin-64/jep").absolutePath}:" +
+            "${file("../grobid-home/lib/lin-64").absolutePath}:"
+    } else  {
+        throw new RuntimeException("Unsupported platform!")
+    }
+    
     trainerTasks.each { taskName, mainClassName ->
         tasks.create(name: taskName, type: JavaExec, group: 'modeltraining') {
             main = mainClassName
             classpath = sourceSets.main.runtimeClasspath
+            if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0)
+                jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+            systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
         }
     }
 
@@ -489,28 +513,48 @@ project(":grobid-trainer") {
         main = 'org.grobid.trainer.evaluation.EndToEndEvaluation'
         classpath = sourceSets.main.runtimeClasspath
         args 'nlm', getArg('p2t', '.'), getArg('run', '0'), getArg('fileRatio', '1.0')
-        jvmArgs '-Xmx3072m'
+        if (JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+            jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+        } else {
+            jvmArgs '-Xmx3072m'
+        }
+        systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
 
     task(teiEval, dependsOn: 'classes', type: JavaExec, group: 'modelevaluation') {
         main = 'org.grobid.trainer.evaluation.EndToEndEvaluation'
         classpath = sourceSets.main.runtimeClasspath
         args 'tei', getArg('p2t', '.'), getArg('run', '0'), getArg('fileRatio', '1.0')
-        jvmArgs '-Xmx3072m'
+        if(JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+            jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+        } else {
+            jvmArgs '-Xmx3072m'
+        }
+        systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
 
     task(PrepareDOIMatching, dependsOn: 'classes', type: JavaExec, group: 'modelevaluation') {
         main = 'org.grobid.trainer.evaluation.EvaluationDOIMatching'
         classpath = sourceSets.main.runtimeClasspath
         args 'data', getArg('p2t', '.')
-        jvmArgs '-Xmx3072m'
+        if(JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+            jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+        } else {
+            jvmArgs '-Xmx3072m'
+        }
+        systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
 
     task(EvaluateDOIMatching, dependsOn: 'classes', type: JavaExec, group: 'modelevaluation') {
         main = 'org.grobid.trainer.evaluation.EvaluationDOIMatching'
         classpath = sourceSets.main.runtimeClasspath
         args 'eval', getArg('p2t', '.')
-        jvmArgs '-Xmx3072m'
+        if(JavaVersion.current().compareTo(JavaVersion.VERSION_1_8) > 0) {
+            jvmArgs '-Xmx3072m', "--add-opens", "java.base/java.lang=ALL-UNNAMED"
+        } else {
+            jvmArgs '-Xmx3072m'
+        }
+        systemProperty "java.library.path","${System.getProperty('java.library.path')}:" + libraries
     }
 }
 
@@ -548,15 +592,15 @@ tasks.register("codeCoverageReport", JacocoReport) {
 /** COVERALLS **/
 coveralls {
     sourceDirs = files(subprojects.sourceSets.main.allSource.srcDirs).files.absolutePath
-    jacocoReportPath = "build/reports/jacoco/codeCoverageReport/codeCoverageReport.xml"
 }
+
 
 tasks.coveralls {
     dependsOn codeCoverageReport
 }
 
 wrapper {
-    gradleVersion "7.1.1"
+    gradleVersion "7.2"
 }
 
 build.dependsOn project.getSubprojects().collect({ it.getTasks().getByName("build") })
